# LearningRenderer

./: CMakeLists.txt  Makefile  README  README.md  RayTracing.cpp  RayTracing.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  objects.cpp  objects.h  qgl.cpp  qgl.h  shaders.h  tgaimage.h
Geometry/: geometry.cpp  geometry.h
Labs/: lab_SSAO.h  lab_phong.h  lab_pt.h  lab_raster.hpp  lab_shadow.h  lab_test.h  lab_tex.h  labs.h
Math/: calculate.cpp  calculate.hpp  math_init.hpp  matrix.cpp  matrix.hpp  vec.cpp  vec.hpp
Models/: model.cpp  model.h
Objects/: lights.hpp  object.cpp  object.hpp
QGL/: SSA0.cpp  SSAO.h  pieces.cpp  pieces.h  pieces.hpp  process.h  transform.cpp  transform.hpp  types.h
Rasterizer/: rasterizer.cpp  rasterizer.h  rasterizer.hpp
RayTracing/: BVH.cpp  BVH.h  PathTracing.cpp  PathTracing.h
Shaders/: PhongShader.h  Shaders.h  Shaders.hpp  ShadowShader.h  TexShader.h  TexShader.hpp  shader.cpp  shader.h  shader.hpp
Test/: Test.hpp  TestRaster.hpp
Vec/: vec.cpp  vec.h
test/: CMakeLists_1.txt  test  test.cpp
